--- a/css/new.css
+++ b/css/new.css
@@ -18,7 +18,7 @@ body{
     z-index: 1;
 }
 .main-container{
-    height: 1200px;
+    height: 100%;
     width: 100%;
     display:flex;
     flex-direction:column;
@@ -47,11 +47,50 @@ body{
     justify-content: center;
     align-items: center;
 }
+.section2{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+.section2:nth-child(1){
+    flex-direction: column;
+    justify-content: end;
+    margin-bottom: 80px;
+}
+.select_btn{
+    margin: 3rem;
+    box-sizing: border-box;
+    padding: 4rem 2rem;
+    font-size: clamp(1rem, 3vw, 3.5rem);
+    font-weight: bold;
+    border-radius: 30px;
+    letter-spacing: 0.4rem;
+    background-color:rgba(80, 80, 80, 0.5);
+    color: rgba(255, 255, 255, 0.7);
+}
+.select_btn:hover{
+    transition: 0.3s;
+    background-color:#ffa24b97;
+    color: rgba(255, 255, 255, 0.9);
+}
+.select_btn:active{
+    transition: 0.3s;
+    background-color:#f98316d1;
+    color: rgba(255, 255, 255, 1);
+}
+.sub_text{
+    font-size: 20px;
+    margin-top: 50px;
+}
 .text{
     /* color:aliceblue; */
     color: rgba(255, 255, 255, 0.8);
     /* mix-blend-mode: difference; */
-    font-size: 30px;
+    /* font-size: 30px; */
+    font-size: clamp(1rem, 2.5vw, 2rem);
     text-align: center;
     line-height: 2em;
     letter-spacing: 0.25rem;
@@ -82,14 +121,13 @@ body{
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 20px;
+    font-size: clamp(0.7rem, 1.6vw, 2rem);
     color: rgba(255, 255, 255, 0.8);
     animation: upslide 0.7s ease-out;
 }
 .event_btn:hover{
     background-color:rgba(0, 0, 0, 0.7);
     color: rgba(255, 255, 255, 0.9);
-    cursor: pointer;
     transition: 0.3s;
 }
 .event_btn:active{
@@ -107,6 +145,17 @@ body{
     background-color: rgba(0,0,0,0.8);
     justify-content: center;
     align-items: center;
+}
+.close{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+.close_btn{
+    background-color: transparent;
+    color:#fff;
+    font-size: 20px;
+    transform: translate(180px, 0);
 }
 .login-form{
     display:flex;
@@ -129,6 +178,14 @@ body{
     border-radius: 0.2rem;
     font-size: 16px;
     letter-spacing: 0.1rem;
+    color: #fff;
+    background-color: transparent;
+    border:none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+}
+.login-form input:focus{
+    box-shadow: 0 10px 12px -7px rgba(0, 79, 255, 0.7);
 }
 .login-form button{
     margin: 30px;
@@ -147,6 +204,10 @@ body{
 .login-form button:active{
     color:rgba(0, 0, 0, 1);
     background: rgba(255, 255, 255, 1);
+    box-shadow: 0 10px 12px -7px rgba(0, 79, 255, 1);
+}
+button:hover{
+    cursor: pointer;
 }
 
 @keyframes downslide {
@@ -170,60 +231,44 @@ body{
     }
 }
 
-/* @media (max-width:1000px){
-    .text{
-        font-size: 20px;
-    }
+@media (max-width:1024px){
     .section{
-        height: 500px;
+        height: 640px;
+    }
+    .subject{
+        font-size: 45px;
     }
     .event_btn{
         font-size: 30px;
     }
-    #event_text{
-        font-size: 15px;
-    }
-}
-@media (max-width:700px){
-    .text{
-        font-size: 15px;
-    }
-    .section{
-        height: 450px;
-    }
-    .event_btn{
-        font-size: 25px;
-    }
-    #event_text{
-        font-size: 12px;
-    }
-}
-@media (max-width:500px){
-    .text{
-        font-size: 10px;
-    }
-    .section{
-        height: 400px;
-    }
-    .event_btn{
-        font-size: 24px;
-    }
-    #event_text{
-        font-size: 10px;
-        top: 88%;
-    }
-}
-@media (max-height:100px){
-    .text{
+    .select_btn{
         font-size: 20px;
     }
+    .sub_text{
+        font-size: 14px;
+    }
+}
+@media (max-width:768px){
     .section{
-        height: 500px;
+        height: 600px;
+    }
+    .subject{
+        font-size: 40px;
     }
     .event_btn{
-        font-size: 30px;
+        font-size: 28px;
     }
-    #event_text{
+    .section2{
+        flex-direction: column;
+    }
+    .section2:nth-child(1){
+        justify-content: center;
+    }
+    .select_btn{
         font-size: 15px;
+        margin: 20px;
     }
-} */
+    .sub_text{
+        font-size: 10px;
+    }
+}
