--- a/css/new.css
+++ b/css/new.css
@@ -49,6 +49,8 @@ body{
 }
 .section2{
     display: flex;
+    margin: 0;
+    /* position: relative; */
     flex-direction: row;
     width: 100%;
     height: 300px;
@@ -228,6 +230,16 @@ button:hover{
     to{
         top:90vh;
         opacity: 1;
+    }
+}
+@keyframes moveLeftButton{
+    from{
+        left:0;
+    }
+    to{
+        left: 45%;
+        top: 110%;
+        transform: translate(-50%, -50%);
     }
 }
 
