--- a/css/main.css
+++ b/css/main.css
@@ -2,50 +2,11 @@
     padding: 0;
     margin: 0;
     border: none;
+    box-sizing: border-box;
 }
 body{
-    font-size: 14px;
     font-family: 'Roboto', sans-serif;
-    text-align: center;
 }
-
-.login-wrapper{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    height: 350px;
-    padding: 40px;
-    box-sizing: border-box;
-}
-.login-wrapper > h2{
-    font-size: 24px;
-    color: #6A24FE;
-    margin-bottom: 20px;
-}
-#login-form > input{
-    width: 100%;
-    height: 48px;
-    padding: 0 10px;
-    box-sizing: border-box;
-    margin-bottom: 16px;
-    border-radius: 6px;
-    background-color: #F8F8F8;
-}
-#login-form > input::placeholder{
-    color: #D2D2D2;
-}
-#login-form > input[type="submit"]{
-    color: #fff;
-    font-size: 16px;
-    background-color: #6A24FE;
-    margin-top: 20px;
-}
-input[type="checkbox"]{
-    margin-right:3%;
-}
-
 #banner {
     position: fixed;
     /*고정*/
@@ -57,88 +18,282 @@ input[type="checkbox"]{
     /*중앙정렬*/
     z-index: 1;
 }
-
-.section:nth-child(1){
-    position:relative;
-    color: rgb(35, 70, 126);
-    background: rgb(218, 226, 255);
-    height: 450px;
+.main-container{
+    height: 100%;
+    width: 100%;
+    display:flex;
+    flex-direction:column;
 }
+.main-container::before{
+    position: fixed;
+    z-index: -1;
+    height: 1200px;
+    width: 100%;
+    content: "";
+    /* background-attachment: fixed; */
+    background-image: url('../images/section_background.jpg');
+    /* background-repeat: no-repeat; */
+    background-position: 50% 40%;
+    background-size: 1800px 2700px;
 
-.section:nth-child(2){
-    position:relative;
-    color: rgb(37, 126, 35);
-    background: rgb(223, 255, 218);
-    height: 450px;
+
+    filter: blur(5px) brightness(40%);
+    transform: scale(1.02);
 }
-
-#afterloginsection{
-    /* color: rgb(35, 70, 126); */
-    background: rgb(218, 226, 255);
+.section{
+    display: flex;
+    width: 100%;
+    height: 700px;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
 }
-
-#afterloginsection button{
-    display:inline-block;
-    margin: 0 20px;
-    width: 40%;
-    height: 60%;
-    color: rgb(0, 71, 185);
-    background: rgb(138, 163, 255);
-    font-size: 220%;
-    line-height: 200%;
+.section2{
+    position: relative;
+    display: flex;
+    margin: 0;
+    /* position: relative; */
+    flex-direction: row;
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+.section2:nth-child(1){
+    flex-direction: column;
+    justify-content: end;
+    margin-bottom: 80px;
+}
+.select_btn{
+    margin: 3rem;
+    box-sizing: border-box;
+    width: 35%;
+    height: 300px;
+    padding: 4rem 2rem;
+    font-size: clamp(1rem, 3vw, 3.5rem);
     font-weight: bold;
+    border-radius: 30px;
+    letter-spacing: 0.4rem;
+    background-color:rgba(80, 80, 80, 0.5);
+    color: rgba(255, 255, 255, 0.7);
 }
-#afterloginsection button > .tiny_text{
-    font-size: 70%;
+.select_btn:hover{
+    transition: 0.3s;
+    background-color:#ffa24b97;
+    color: rgba(255, 255, 255, 0.9);
 }
-#afterloginsection button:hover{
-    color: rgb(0, 45, 116);
-    background: rgb(74, 113, 255);
+.select_btn:active{
+    transition: 0.3s;
+    background-color:#f98316d1;
+    color: rgba(255, 255, 255, 1);
 }
-#afterloginsection button:active{
-    color: rgb(0, 25, 65);
-    background: rgb(37, 84, 255);
+.sub_text{
+    font-size: 20px;
+    margin-top: 50px;
 }
-
 .text{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 170%;
-    line-height: 250%;
-}
+    /* color:aliceblue; */
+    color: rgba(255, 255, 255, 0.8);
+    /* mix-blend-mode: difference; */
+    /* font-size: 30px; */
+    font-size: clamp(1rem, 2.5vw, 2rem);
+    text-align: center;
+    line-height: 2em;
+    letter-spacing: 0.25rem;
 
+    animation: downslide 0.7s ease-out;
+}
 .subject{
-    font-size: 200%;
+    font-size: 50px;
     font-weight: bold;
-    color: rgb(0, 51, 171);
 }
-
 .event_btn{
     position: fixed;
-    width: 90%;
-    top: 90%;
-    text-align: center;
+    box-sizing: border-box;
+
+    top: 80%;
     transform: translate(-50%, -50%);
     border: none;
-    padding: 15px;
-    font-size: 150%;
+    border-radius: 60px;
+    padding: 15px 40px;
+    font-size: 40px;
     font-weight: bold;
-    background-color: blanchedalmond;
-    color:brown;
+    letter-spacing: 0.15rem;
+    background-color:rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.7);
 }
-
+#event_text{
+    position: fixed;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: clamp(0.7rem, 1.6vw, 2rem);
+    color: rgba(255, 255, 255, 0.8);
+    animation: upslide 0.7s ease-out;
+}
 .event_btn:hover{
-    border: none;
-    font-weight: bold;
-    background-color: rgb(251, 185, 86);
-    color:rgb(165, 12, 12);
+    background-color:rgba(0, 0, 0, 0.7);
+    color: rgba(255, 255, 255, 0.9);
+    transition: 0.3s;
+}
+.event_btn:active{
+    background-color:rgba(0, 0, 0, 1);
+    color: rgb(255, 255, 255);
+}
+.login-container{
+    display:none;
+    flex-direction: column;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100vh;
+    background-color: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+}
+.close{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+.close_btn{
+    background-color: transparent;
+    color:#fff;
+    font-size: 20px;
+    transform: translate(180px, 0);
+}
+.login-form{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+.login-form h1{
+    color:aliceblue;
+    font-size: 30px;
+    font-weight: bolder;
+    margin: 40px;
+    letter-spacing: 0.5rem;
+}
+.login-form input{
+    margin: 10px;
+    padding: 0 0 0 10px;
+    width: 15rem;
+    height: 2rem;
+    border-radius: 0.2rem;
+    font-size: 16px;
+    letter-spacing: 0.1rem;
+    color: #fff;
+    background-color: transparent;
+    border:none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+}
+.login-form input:focus{
+    box-shadow: 0 10px 12px -7px rgba(0, 79, 255, 0.7);
+}
+.login-form button{
+    margin: 30px;
+    width: 8rem;
+    height: 2rem;
+    border-radius: 0.5rem;
+    color:rgba(0, 0, 0, 0.7);
+    background: rgba(255, 255, 255, 0.7);
+    letter-spacing: 0.1rem;
+}
+.login-form button:hover{
+    color:rgba(0, 0, 0, 0.9);
+    background: rgba(255, 255, 255, 0.9);
+    transition: 0.3s;
+}
+.login-form button:active{
+    color:rgba(0, 0, 0, 1);
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 10px 12px -7px rgba(0, 79, 255, 1);
+}
+button:hover{
+    cursor: pointer;
 }
 
-.event_btn:active{
-    border: none;
-    font-weight: bold;
-    background-color: rgb(255, 153, 0);
-    color:rgb(160, 0, 0);
+@keyframes downslide {
+    from{
+        top: -200px;
+        opacity: 0;
+    }
+    to{
+        top:0px;
+        opacity: 1;
+    }
+}
+@keyframes upslide {
+    from{
+        top: 100vh;
+        opacity: 0;
+    }
+    to{
+        top:90vh;
+        opacity: 1;
+    }
+}
+@keyframes appear{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+@keyframes moveLeftButton{
+    0%{
+    }
+    100%{
+        left: 50%;
+        top: 90%;
+        transform: translate(-50%, -50%);
+        width:35%;
+        height:70px;
+    }
+}
+
+@media (max-width:1024px){
+    .section{
+        height: 640px;
+    }
+    .subject{
+        font-size: 45px;
+    }
+    .event_btn{
+        font-size: 30px;
+    }
+    .select_btn{
+        font-size: 20px;
+    }
+    .sub_text{
+        font-size: 14px;
+    }
+}
+@media (max-width:768px){
+    .section{
+        height: 600px;
+    }
+    .subject{
+        font-size: 40px;
+    }
+    .event_btn{
+        font-size: 28px;
+    }
+    .section2{
+        flex-direction: column;
+    }
+    .section2:nth-child(1){
+        justify-content: center;
+    }
+    .select_btn{
+        font-size: 15px;
+        margin: 20px;
+    }
+    .sub_text{
+        font-size: 10px;
+    }
 }
